# Wizard-Engine

./: .gitconfig  .gitignore  CMakeLists.txt
Include/: config.h
Libraries/include/glad/: glad.h
Libraries/lib/: glfw3.lib
Shaders/: fragment.txt  vertex.txt
src/: Main.cpp  glad.c  triangle_mesh.cpp  triangle_mesh.h
x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
